[package]
name = "eustress-engine"
version = "0.1.0"
description = "EustressEngine - Desktop 3D Editor"
authors = ["EustressEngine Contributors"]
edition = "2021"

[package.metadata.winres]
OriginalFilename = "eustress-engine.exe"
LegalCopyright = "Copyright © 2025 EustressEngine Contributors"
FileDescription = "Eustress Engine - 3D Editor"
ProductName = "Eustress Engine"

[[bin]]
name = "eustress-engine"
path = "src/main.rs"

[dependencies]
# Workspace members
eustress-common = { path = "../common" }
bevy-camera-controller = { path = "../common/bevy-camera-controller" }
eustress-networking = { path = "../common/eustress-networking", features = ["server", "client", "physics"] }

# Workspace dependencies (Bevy 0.17)
bevy = { workspace = true, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_pbr",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_scene",
    "bevy_audio",
    "bevy_state",
    "default_font",
    "bevy_asset",
    "bevy_animation",
    "bevy_color",
    "png",
    "hdr",
    "x11",
    "wayland",
    "multi_threaded",
    "tonemapping_luts",
] }
bevy_egui = { workspace = true }
egui_extras = { workspace = true }
egui-notify = { workspace = true }
egui_dock = { workspace = true }
egui_material_icons = "0.5"
# CEF webview for browser tabs (macOS only currently)
bevy_cef = { git = "https://github.com/not-elm/bevy_cef", branch = "main", optional = true }
leafwing-input-manager = { workspace = true }
avian3d = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
ron = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
rfd = { workspace = true }
mime_guess = "2"
blake3 = "1"
bitflags = "2"
zstd = "0.13"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
urlencoding = "2"
open = "5"
rune = "0.14"
rand = "0.8"
rayon = "1.10"
reqwest = { version = "0.12", features = ["json", "blocking"] }
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
# Window icon (must match bevy's versions)
image = "0.25"
winit = "0.30"

[build-dependencies]
winres = "0.1"
resvg = "0.44"
ico = "0.3"

[features]
default = []
dev = ["bevy/dynamic_linking"]
hotpatch = ["bevy/hotpatching"]
# CEF webview support (macOS only currently)
cef = ["bevy_cef"]
