[package]
name = "eustress-engine"
version = "0.1.0"
description = "EustressEngine - Desktop 3D Editor"
authors = ["EustressEngine Contributors"]
edition = "2021"
# Plain `cargo run -p eustress-engine` resolves to the editor binary even
# though the package ships several helper bins (generate-benchmark-map,
# convert-to-eustress, reseed-space-subtree, eustress-lsp). Without this,
# cargo errors "could not determine which binary to run".
default-run = "eustress-engine"

[package.metadata.winres]
OriginalFilename = "eustress-engine.exe"
LegalCopyright = "Copyright © 2025 EustressEngine Contributors"
FileDescription = "Eustress Engine - 3D Editor"
ProductName = "Eustress Engine"

[[bin]]
name = "eustress-engine"
path = "src/main.rs"

[[bin]]
name = "generate-benchmark-map"
path = "src/bin/generate_benchmark_map.rs"

# One-shot: finish the disk→Fjall pivot for a Space so its directory is
# the canonical `.eustress` container (verified import + reversible
# relocation of the loose service trees). Safe by default — only the
# `--yes` form mutates the Space, and only after a byte-for-byte verify.
[[bin]]
name = "convert-to-eustress"
path = "src/bin/convert_to_eustress.rs"

# Recovery: reseed a Space subtree's TOMLs disk→Fjall `tree` partition and
# drop their stale `#bin` caches, WITHOUT touching the `datastore`
# partition. Needed when a closed-engine disk edit / `git restore` must
# propagate to a non-migrated Space's tree (e.g. the V-Cell mesh recovery).
# Run: cargo run -p eustress-engine --bin reseed-space-subtree -- --subdir Workspace/V-Cell
[[bin]]
name = "reseed-space-subtree"
path = "src/bin/reseed_space_subtree.rs"
required-features = ["world-db"]

# Language Server Protocol stdio bin for external editors (Windsurf /
# VS Code / Zed / Neovim). Guarded by the `lsp` feature so the main
# engine build doesn't pull in tower-lsp when you don't need it.
# Build: `cargo build --bin eustress-lsp --features lsp`
# Run:   `eustress-lsp` (reads/writes LSP JSON-RPC on stdin/stdout)
[[bin]]
name = "eustress-lsp"
path = "src/bin/eustress_lsp.rs"
required-features = ["lsp"]


[dependencies]
# Cross-platform clipboard (arboard). Backs the Slint platform clipboard
# (Ctrl+V paste in LineEdit/TextInput), Explorer "Copy Path", and the
# Vec3 copy/paste icons. Replaces the old Windows-only `clipboard-win`,
# which broke macOS/Linux builds. All usages are `#[cfg(feature =
# "clipboard")]`-gated so headless / server builds can opt out; the
# interactive `core` tier enables it.
arboard = { version = "3", optional = true }

# Workspace members
eustress-common = { path = "../common", features = ["physics", "realism", "realism-scripting", "luau", "gui"] }
eustress-bliss = { path = "../bliss" }
eustress-stream-node = { path = "../stream-node" }
# Shared tool registry — single source of truth for MCP tool
# definitions + handlers. The engine enables the `bevy` feature so
# `ToolRegistry` derives `Resource`; the MCP server depends on this
# same crate without the `bevy` feature and treats the registry as a
# plain struct.
eustress-tools = { path = "../tools", features = ["bevy"] }
bevy-camera-controller = { path = "../common/bevy-camera-controller" }
eustress-geo = { path = "../geo" }
# TODO: Fix Bevy 0.17 compatibility issues in eustress-networking
# eustress-networking = { path = "../common/eustress-networking", features = ["server", "client", "physics"] }

# bevy_shader provides ShaderRef, used in MaterialExtension implementations (Bevy 0.18)
bevy_shader = { version = "0.18", default-features = false }

# Workspace dependencies (Bevy 0.18). `debug` enabled so B0001 query-
# conflict panics report system + type names — essential when iterating
# on system-param composition. `bevy_audio` restored 2026-04-22 per
# user instruction: audio is required. If cpal/rodio surface a Windows
# 0.54 conflict again, pin the workspace `windows` crate rather than
# disabling the feature.
bevy = { workspace = true, default-features = false, features = [
    "bevy_log",
    "bevy_winit",
    "bevy_render",
    "bevy_pbr",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_scene",
    "bevy_audio",
    "bevy_state",
    "default_font",
    "bevy_asset",
    "bevy_animation",
    "bevy_color",
    "bevy_ui",
    "png",
    "hdr",
    "x11",
    "wayland",
    "multi_threaded",
    "tonemapping_luts",
    "zstd_rust",
    "debug",
] }
# bevy_ecs as a direct, NON-OPTIONAL dep. Two reasons it must NOT be optional:
#   1. Merely naming `bevy_ecs` in this manifest makes Bevy's derive macros
#      (Component/Resource/SystemParam/…) emit `bevy_ecs::` paths instead of
#      `bevy::ecs::`. If the dep is optional, those paths only resolve when the
#      enabling feature is on, so a plain `cargo build` breaks with E0433 across
#      every derive. Non-optional keeps the crate always linked → paths resolve.
#   2. We turn on its `trace` feature HERE (always), so Bevy's per-system
#      `tracing` spans ("system"/"system_commands", carrying a `name` field) are
#      always emitted. That lets the per-system profiler attach with NO rebuild,
#      and — crucially — the feature never flips, so it never thrashes the whole
#      Bevy stack (the cause of the "1-hour build"). We deliberately avoid the
#      broader `bevy/trace`, which turns on the `profiling` CRATE's tracing
#      backend workspace-wide and fails to compile rbx_binary
#      (Ustr: !tracing::Value) + rav1e. Unifies with the bevy_ecs `bevy` pulls.
bevy_ecs = { version = "0.18", default-features = false, features = ["trace"] }
# Slint UI (software renderer + FemtoVG OpenGL GPU renderer)
slint = { workspace = true }
# CEF webview for browser tabs (macOS only currently)
bevy_cef = { git = "https://github.com/not-elm/bevy_cef", branch = "main", optional = true }
# Wry webview for browser tabs (Windows WebView2 / macOS WebKit / Linux WebKitGTK)
wry = { version = "0.53", optional = true }
# leafwing-input-manager = { workspace = true }  # DISABLED until Bevy 0.19 support
avian3d = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
ron = { workspace = true }
toml = "0.8"
uuid = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
rfd = { workspace = true }
mime_guess = "2"
blake3 = "1"
bitflags = "2"
tiny-skia = "0.11"
cosmic-text = "0.12"
zstd = "0.13"
tar = "0.4"
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["std"] }
hex = "0.4"
base64 = "0.22"
urlencoding = "2"
open = "5"
rune = "0.14"
rand = "0.8"
rayon = "1.10"
crossbeam = "0.8"
tracing = "0.1"
# Flamegraph renderer for the opt-in per-system profiler (feature
# `profiling`). Optional + workspace-pinned (0.11) so the default build never
# pulls it; only `--features profiling` links it. `tracing-subscriber` is NOT
# a direct dep — the profiler reaches it via `bevy::log::tracing_subscriber`
# (bevy's own re-export) so the `Layer<Registry>` types match `BoxedLayer`.
inferno = { workspace = true, optional = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }
eustress-forge-sdk = { path = "../forge-sdk" }
# Forge ORCHESTRATION crate (DISTINCT from the connect-only SDK above) —
# carries the in-forge sim module (residency-cell → SimCell gang placement).
# Optional + behind the `sim-orchestration` engine feature so the default
# build never links forge-orchestration (openraft + fjall + quinn/tls).
# The forge crate gates `pub mod sim` on ITS OWN `sim-orchestration` feature
# (= raft-persist), so we MUST forward that feature or `eustress_forge::sim`
# would not be compiled into the dependency.
eustress-forge = { path = "../forge", optional = true, features = ["sim-orchestration"] }
# WorldDb — Fjall-backed authoritative ECS persistence. Optional today;
# wired by the `world-db` feature. When on, the Bevy plugin in
# `space::world_db_plugin` opens `<universe>/<space>/world.fjalldb/`
# on Space switch and mirrors Transform/BasePart writes alongside the
# legacy TOML write path.
eustress-worlddb = { path = "../worlddb", optional = true }
# Data Platform columnar leaf (P0). Optional + OFF by default and NOT in
# `core` — arrow-rs/parquet must never enter the default `cargo run` graph
# (DATA_PLATFORM_PLAN.md D2; enforced by the `data-graph-purity` CI guard).
# No engine code consumes it yet; the wiring + `data` feature establish the
# boundary and give the CI guard something to verify. P1 wires consumers.
eustress-data = { path = "../data", optional = true }
# Roblox place importer (Wave 4/6) — File→Import→Roblox Place + drag-drop
# call eustress_roblox_import::import_into_space.
eustress-roblox-import = { path = "../roblox-import" }
# Roblox CDN / local-mirror asset fetcher (Wave F2 — MESHES). The engine
# constructs a ChainFetcher (optional local folder + network) and hands it
# to the importer so rbxassetid:// MeshPart/SpecialMesh refs resolve into
# real .glb geometry. Network dep is quarantined here, out of the
# engine-free importer crate.
eustress-roblox-assets = { path = "../roblox-assets" }
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-full = "0.3"

# ── Video playback ────────────────────────────────────────────────
# Pure-Rust H.264-in-MP4 decoder stack. We tried `bevy_video` first —
# it's stuck at Bevy 0.9 (Jan 2023) and has had no maintenance since,
# so it can't ride alongside our Bevy 0.18 engine. The combination
# below is what actually compiles in 2026:
#
# • `mp4` (alfg/mp4-rust) parses ISO Base Media File Format containers,
#   walks H.264 video tracks, and yields each sample's bytes in AVCC
#   length-prefixed NAL format.
# • `openh264` is the BSD-2-licensed Rust wrapper around Cisco's
#   OpenH264 decoder. The default build downloads the prebuilt binary
#   at `cargo build` time (Cisco's H.264 patent licence covers users
#   of the binary). For offline builds, switch to `openh264 = { ...,
#   features = ["source"] }` — compiles the C source instead, slower
#   but reproducible.
#
# Constraints accepted by this choice:
#   - H.264-in-MP4 only (95% of "user uploads a clip" cases). HEVC,
#     AV1, VP9, WebM/Matroska are out of scope until a heavier decoder
#     stack (ffmpeg-next / gstreamer) is wired in.
#   - Software decode only. Hardware paths require ffmpeg-next or a
#     wgpu-direct decoder (not yet a thing in 2026).
mp4 = "0.14"
openh264 = "0.9"
csv = "1.3"
crossbeam-channel = "0.5"
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-fancy"] }
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
# Window icon (must match bevy's versions)
image = "0.25"
winit = "0.30"
# WGPU version synced with Bevy 0.19 (wgpu 28)
# wgpu = "27"
# Note: Using Bevy's built-in wgpu instead of explicit dependency
# Raw window handle for Slint platform integration
raw-window-handle = "0.6"
# QUIC networking for Play Server
# Note: rustls 0.23 defaults to aws-lc-rs, we use ring to avoid cmake/nasm dependency
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rcgen = "0.13"
# Tokio for async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "macros"] }
# DashMap for concurrent collections
dashmap = "6"
# Bytes for EustressStream payload publishing
bytes = "1"
# Async channels for Slint+Bevy integration
smol = "2"
# Non-blocking filesystem for the runtime-swappable `space://` asset reader
# (src/space/space_asset_source.rs). Same crate Bevy's own FileAssetReader
# uses; already in Cargo.lock transitively via bevy_asset, so this direct
# dep adds no new download — it just lets us name `async_fs` here.
async-fs = "2"
# LSP server (feature-gated — pulled in only by the `eustress-lsp` bin).
# Deliberately optional so the main engine binary doesn't link tower-lsp.
tower-lsp = { version = "0.20", optional = true }
spin_on = "0.1"
# Byte casting for GPU buffer operations
bytemuck = { version = "1.16", features = ["derive"] }
# Mesh optimization (runtime vertex cache, LOD, meshlets)
meshopt = "0.4"
# System info detection for stress test scaling
sysinfo = "0.33"

[build-dependencies]
winres = "0.1"
resvg = "0.44"
ico = "0.3"
icns = "0.3"
png = "0.17"
slint-build = { git = "https://github.com/slint-ui/slint", branch = "master" }

[features]
# ── Build tiers ───────────────────────────────────────────────────────────────
# "core" is the stable release tier: currently enables every feature so builds
# from the Core branch match main until we intentionally strip features. When a
# module needs to be excluded from Core, remove it from this list — the module
# itself stays gated by its individual feature flag.
default = ["core"]
core = [
    "realism-scripting",
    "webview",
    "streaming",
    "notifications",
    "soul-panel",
    "mindspace",
    "workshop",
    "ai-integration",
    "forge",
    "bliss",
    "clipboard",
    # LSP server ships inside the engine bundle. `cargo build --release`
    # produces BOTH `eustress-engine` AND `eustress-lsp` automatically —
    # same binary install, no separate download required for external
    # IDEs to get Rune intelligence.
    "lsp",
    # Dynamic Unit System v1 — convert authored-unit values to engine-
    # native meters at every load boundary. ON by default 2026-05-13.
    "units_v1",
    # WorldDb — Fjall-backed authoritative ECS store. ON by default
    # 2026-05-15 (binary pivot). The mirror path is ADDITIVE: TOML
    # stays authoritative, Fjall is written alongside, so a Fjall
    # fault degrades to a logged warning rather than data loss.
    # Override with `--no-default-features` (+ re-add needed tiers) to
    # diagnose a WorldDb issue in isolation.
    "world-db",
]

# ── Individual feature gates ──────────────────────────────────────────────────
# Rune scripting with VM pooling and ECS bindings
realism-scripting = []
# Wry webview support (Windows/macOS/Linux)
webview = ["wry"]
# EustressStream streaming: scene deltas, simulation results, iteration history, Rune audit trail
streaming = ["eustress-common/streaming"]
# Toast notifications (bottom-right stack + Settings tab)
notifications = []
# Soul Panel — script audit view with Rune/Luau split
soul-panel = []
# MindSpace panel — BillboardGui label authoring
mindspace = []
# Workshop panel — AI-driven ideation pipeline (implies ai-integration)
workshop = ["ai-integration"]
# Claude API integration — Soul code generation, Workshop, summary builds
ai-integration = []
# Vortex semantic mention backend — SubwordTokenizer + embedvec (H4 lattice).
# When off (default), the Workshop @ popup uses the built-in substring searcher.
# When on, `workshop::mention_searcher_vortex` is compiled and installed in
# place of the substring fallback. Dependencies stay behind the flag so
# non-Vortex builds skip the embedvec + sled payload.
workshop-vortex-embeddings = []
# Clipboard integration — right-click → Copy Path, Vec3 row
# copy/paste icons, etc. Pulls in the cross-platform `arboard` crate.
# Declared as `dep:arboard` so the feature gate and the optional dep
# stay in sync (otherwise the `#[cfg(feature = "clipboard")]` blocks
# compile against a non-existent module).
clipboard = ["dep:arboard"]
# zstd-compressed save files (opt-in for large scenes)
compression = []
# LSP server for external editors (Windsurf / VS Code / Zed / Neovim, etc.)
# Only pulled in when building the `eustress-lsp` bin — main engine binary
# stays unchanged. tokio + serde_json are already base deps, so this only
# gates tower-lsp itself.
lsp = ["dep:tower-lsp"]
# Forge orchestration (deployment + remote publishing)
forge = []
# Bliss node (Bliss token economy integration)
bliss = []
# Dynamic Unit System v1 — apply authored-unit → meter conversion at every
# load boundary (spawn_instance, spawn_gui_element, paste, MCP create). ON
# by default 2026-05-13 (folded into the `core` build tier). Override with
# `--no-default-features` if you need to diagnose a unit-conversion bug.
units_v1 = ["eustress-common/units_v1"]
# WorldDb — Fjall-backed live ECS store (2026-05-15 binary pivot,
# memory project_eustress_binary_pivot). IN `core` since 2026-05-15:
# the engine is ECS+DB-authoritative by default. The plugin opens
# `<space>/world.fjalldb/`, seeds it from TOML on first open, then
# cold-loads from Fjall and persists runtime edits to Fjall.
# Enabling world-db also turns on the importer's BinarySink so File→Import
# (do_import_roblox_place) can bake bare parts straight into this Space's
# `entities` partition; file-natured nodes still land as _instance.toml.
world-db = ["dep:eustress-worlddb", "eustress-roblox-import/binary-sink"]
# Sim orchestration (Phase 6 engine seam, OPT-IN). Pulls the forge
# ORCHESTRATION crate's sim module (residency-cell → SimCell gang placement)
# and requires `world-db` for the residency cell encoding. NOT in `core`/
# `default`: it links forge-orchestration (openraft + fjall + quinn/tls), so
# the everyday editor build stays unaffected. Activate with
# `cargo run -p eustress-engine --features sim-orchestration` (layers on top
# of `default`/`core`, so world-db et al. stay enabled). The new
# `SimOrchestrationPlugin` is DISTINCT from the connect-only `ForgePlugin`
# (SDK game-server deployment) — they share no code.
sim-orchestration = ["dep:eustress-forge", "world-db"]
# Data Platform columnar substrate (DATA_PLATFORM_PLAN.md P0). OPT-IN, NOT in
# `core`/`default`: pulls the `eustress-data` leaf (arrow-rs + parquet), which
# must stay out of the everyday editor build. Activate with
# `cargo run -p eustress-engine --features data`. The `data-graph-purity` CI
# guard fails the build if this ever leaks into the default feature graph.
data = ["dep:eustress-data", "eustress-data/parquet"]
# Legacy TOML write-back authoring path. OPT-IN since 2026-05-15 —
# the default build no longer writes `_instance.toml` on edit;
# persistence goes to `world.fjalldb/`. Turn this on to restore the
# file-system-first authoring loop (dual-write: TOML + Fjall) — the
# recommended path for existing hierarchical universes (Universe1,
# ARC-AGI-3) until the faithful TOML→Fjall importer lands, because
# today's importer is a FLAT scaffold (no service/parent-child
# hierarchy). The TOML *read* path is always compiled regardless of
# this flag — it's the first-run seed + recovery loader, not gated.
toml = []

# ── Build profile toggles ─────────────────────────────────────────────────────
dev = ["bevy/dynamic_linking"]
hotpatch = ["bevy/hotpatching"]
debug = ["bevy/bevy_debug_stepping"]
# Opt-in per-system flamegraph (src/profiler.rs `mod enabled`). `bevy_ecs/trace`
# is now ALWAYS on (see the bevy_ecs dep above), so the per-system spans exist in
# every build and this feature only adds `inferno` to render the SVG + installs
# the capturing tracing Layer. Because no Bevy feature flips, this build is
# incremental (engine-only), NOT a full Bevy rebuild.
#   Everyday phase profiler (no feature):
#     EUSTRESS_PROFILE=1 cargo run -p eustress-engine   → eustress_profile_phases.txt
#   Per-system deep dive (this feature):
#     EUSTRESS_PROFILE=1 cargo run --features profiling -p eustress-engine
#     → eustress_profile.txt + eustress_profile.svg (per-system, inferno)
profiling = ["dep:inferno"]
# CEF webview support (macOS only currently)
cef = ["bevy_cef"]
