# =============================================================================
# EUSTRESS-IDENTITY - Sovereign Portable Identity (SPI)
# =============================================================================
# TOML-based identity system with Ed25519 keypairs.
# One keypair → login + Bliss wallet address.
# Fork-portable, human-readable, non-coercive by design.
# =============================================================================

[package]
name = "eustress-identity"
version = "0.1.0"
edition = "2021"
description = "Sovereign Portable Identity — TOML-based, fork-portable, Ed25519-bound"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true

toml = "0.8"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core", "zeroize"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
hex = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }

[features]
default = ["witness"]
witness = ["reqwest"]
