# =============================================================================
# eustress-roblox-import — Roblox place file importer
# =============================================================================
# Parses .rbxl / .rbxlx / .rbxm / .rbxmx into the Eustress instance model
# via the canonical eustress_common::instance_create pipeline.
#
# Wave 1 scaffold: NOT YET added to workspace members.
# Wave 2 will:
#   1. Uncomment the rbx_* deps below.
#   2. Add "crates/roblox-import" to eustress/Cargo.toml [workspace.members].
#   3. Wire FileEvent::ImportRobloxPlace + drop-target in engine::ui.
#
# Spec: docs/architecture/ROBLOX_IMPORT_SPEC.md
# =============================================================================

[package]
name = "eustress-roblox-import"
version = "0.1.0"
edition = "2021"
description = "Roblox place file (.rbxl/.rbxlx/.rbxm/.rbxmx) → Eustress instance model"

[dependencies]
# In-tree deps (live ones — these are real and will compile once the crate
# is added to the workspace).
eustress-common = { path = "../common" }

# Workspace-shared utilities
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
blake3      = "1.5"

# Logging
tracing     = "0.1"

# Hex encoding (for uuid output)
hex         = "0.4"

# =============================================================================
# Roblox file-format parsers — all MIT, all pure Rust, all rojo-rbx.
# Enabled in Wave 4 (Phase 1) along with adding this crate to workspace.members.
# =============================================================================
rbx_dom_weak           = "2"
rbx_binary             = "0.7"
rbx_xml                = "0.13"
rbx_reflection_database = "0.2"

[dev-dependencies]
# Fixture diffing for golden tests
pretty_assertions = "1.4"
